--- a/czjszbzrjb.html
+++ b/czjszbzrjb.html
@@ -82,8 +82,7 @@ a:hover {
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1182px; height: 60px; z-index: 3; left: 23px; top: 27px; bottom: 414px;" id="layer6" class="style15">
 &nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE39">简报</span> </span></span><a href="czjszbzrsj.html"> 大事记</a>&nbsp; 
-<a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp;
-<a href="czjszbzrsp.html">视 频</a>&nbsp; <a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+<a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 
 <p class="STYLE40">简报（2021第11期）―― <span class="STYLE42"> <a href="jpg/工作室/简报（2021年度11月）.pdf">初中名班主任主持人集中研讨案例集编修</a></span><br />
   <br />
