--- a/czjszbzrsj.html
+++ b/czjszbzrsj.html
@@ -71,6 +71,8 @@ a:hover {
 .STYLE39 {color: #FF0000}
 .style371 {				border: 1px solid #0000FF;
 }
+.STYLE40 {font-size: x-large; color: #FF0000; text-align: center; font-family: 楷体; }
+.STYLE41 {font-size: 18px; color: #0000FF; text-align: center; font-family: 楷体; }
 </style>
 </head>
 
@@ -83,13 +85,13 @@ a:hover {
 <table style="width: 100%" class="style38">
 				<tr>
 								<td class="style33" style="width: 382px">202112</td>
-								<td class="style33">&nbsp;</td>
+								<td class="STYLE40">202501</td>
 								<td class="style33">&nbsp;</td>
 				</tr>
 				<tr>
 				  <td class="style37" style="width: 382px">89、收到所购存储设备（12月2日）<br />
 				    90、设备验收入库（12月3日）</td>
-                  <td class="style33">&nbsp;</td>
+                  <td class="STYLE41">《初中德育主题力行课案例50篇》出版</td>
                   <td class="style33">&nbsp;</td>
   </tr>
 				<tr>
@@ -355,12 +357,12 @@ a:hover {
   </tr>
 				<tr>
 				  <td class="style33" style="width: 382px"><p class="style37">25、组织培训深河中学新入职教师（6月5日）<br />
-				    26、<a href="https://mp.weixin.qq.com/s/rZFouM8-VDDHH_yBfX7fGg">工作室网络直接培训思维导图</a>（6月5日）<br />
+				    26、工作室网络直接培训思维导图（6月5日）<br />
 				    27、深河班主任制定三年规划培训（6月6日）<br />
 			      28、<a href="https://mp.weixin.qq.com/s/kgs_n6Hi0g8pBUiOWFKtAA">深河班主任说课活动点评指导</a>（6月13日）</p>			      </td>
-                  <td class="style37">29、工作室成员<a href="https://v.alltuu.com/album?id=1012537404&amp;from=groupmessage&amp;isappinstalled=0">思维导图培训</a>（7月20日）<br />
+                  <td class="style37">29、工作室成员思维导图培训（7月20日）<br />
                   30、<a href="https://www.meipian3.cn/2aehry50?share_depth=5&amp;user_id=ohbsluPC7Z7f6xQcCTjI8RO8qvMc&amp;sharer_id=ojq1tt-UbXQEVLm_dxBa396us7dM&amp;first_share_uid=39797716&amp;share_user_mpuuid=896338b68f595c3a116856362e1abb1e&amp;v=5.0.2&amp;share_source=groupmessage">市名班主任主持人沙龙活动</a>（7月30日）<br /></td>
-                  <td class="style37"><p>31、观摩<a href="https://mp.weixin.qq.com/s/bbXWLoiPskwSsEuH2yr1dw">直属学校年度教师评选</a>（8月1日）<br />
+                  <td class="style37"><p>31、观摩直属学校年度教师评选（8月1日）<br />
                     32、工作室宣传板完成（8月16日）<br />
                     33、
                     参加孔导重大招标课题开题会（8月24日）</p>                    </td>
@@ -377,15 +379,15 @@ a:hover {
 	12、升级网站空间（3月15日）<br />
 	13、校内感恩主题班会同课异构（3月29日）<br />								</td>
 								<td class="style37">14、工作室文化建设（4月3日）<br />
-	15、<a href="https://mp.weixin.qq.com/s/74IGBt4n9I_YhxPRTuwT7A">工作室成员首聚</a>（4月11日）<br />
-	16、<a href="http://szeb.sz.gov.cn/jyxw/qxdt/201904/t20190419_16908676.htm">深圳初中语文名师公开课</a>（4月18日）<br />
+	15、工作室成员首聚（4月11日）<br />
+	16、深圳初中语文名师公开课（4月18日）<br />
 	17、
 	鼓励成员申报课题（4月19日）<br />
 	18、组建工作室成员微信群（4月22日）<br />
 	19、开具411活动报单（4月26日）	<br />
 	20、核心价值观教育成果征集（4月27日）	<br /></td>
 				  <td class="style37">21、工作室准备申报课题（5月1-9日）								<br />
-				    22、<a href="https://mp.weixin.qq.com/s/bmnRE_V1f1UUHU7WVd_NIA">教育局组织工作室授牌仪式</a>（5月17日）<br />
+				    22、教育局组织工作室授牌仪式（5月17日）<br />
 				    23、制定“思维导图”培训方案（5月23日）<br />
 				    24、研究在活动中开通网络直播（5月24日）</td>
 				</tr>
@@ -413,7 +415,7 @@ a:hover {
 	8、制定工作室年度计划（2019年1月）<br />
 								<br />								</td>
 								<td class="style37">
-	9、<a href="https://mp.weixin.qq.com/s/NPvddEHVXadKnLl_uXpsMA">公众号发布邀请成员信息</a>（2月20日）</td>
+	9、公众号发布邀请成员信息（2月20日）</td>
 				</tr>
 				<tr>
 								<td style="width: 382px">&nbsp;</td>
@@ -428,7 +430,7 @@ a:hover {
 </table>
 <div style="position: absolute; width: 1182px; height: 60px; z-index: 3; left: 23px; top: 28px; bottom: 414px;" id="layer6" class="style15">
 &nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE39">大事记</span> </span></span>&nbsp; 
-<a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp; <a href="czjszbzrjb.html">简报</a>&nbsp;<a href="czjszbzrsp.html">视频</a>&nbsp; <a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+<a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp; <a href="czjszbzrjb.html">简报</a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 
 </body>
 
