--- a/czjszbzrsp.html
+++ b/czjszbzrsp.html
@@ -123,17 +123,15 @@ a:hover {
 				</tr>
 				<tr>
 								<td style="width: 382px" class="style34">
-								<a href="http://www.shenzhong.net">深圳中学</a></td>
+								深圳中学</td>
 								<td class="style34">
-								<a href="http://www.czj3.net/">正君之教</a></td>
+								正君之教</td>
 								<td class="style34">深中初中</td>
 				</tr>
 				<tr>
-								<td style="width: 382px" class="style34">
-								<img src="深圳中学高中部微信图片.jpg" width="101" height="101" /></td>
-								<td class="style34"><img src="正君之教微信二维码.jpg" width="101" height="101" /></td>
-								<td class="style34">
-								<img src="深中初中部微信图片.bmp" width="101" height="101" /></td>
+								<td style="width: 382px" class="style34">&nbsp;</td>
+								<td class="style34">&nbsp;</td>
+								<td class="style34">&nbsp;</td>
 				</tr>
 				<tr>
 								<td style="width: 382px">&nbsp;</td>
