--- a/czjszbzr.html
+++ b/czjszbzr.html
@@ -157,7 +157,7 @@ a:hover {
 <div id="Layer11"><img src="jpg/工作室/陈正君.jpg" width="134" height="176" /></div>
 <p class="style32">&nbsp;</p>
 <div style="position: absolute; width: 1192px; height: 60px; z-index: 3; left: 24px; top: 32px; bottom: 414px;" id="layer6" class="style15">
-&nbsp;<img src="czj5.jpg" width="106" height="104" />&nbsp;&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室</span>&nbsp;</span>&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp;&nbsp;<a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp;<a href="czjszbzrjb.html">简报</a>&nbsp;<a href="czjszbzrsp.html">视频</a>&nbsp; <a href="index.html">返回首页</a></div>
+&nbsp;<img src="czj5.jpg" width="106" height="104" />&nbsp;&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室</span>&nbsp;</span>&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp;&nbsp;<a href="czjszbzrzc.html">主持人</a>&nbsp; <a href="czjszbzrtu.html">图片</a>&nbsp;<a href="czjszbzrjb.html">简报</a>&nbsp;<a href="index.html">返回首页</a></div>
 <p class="style32">&nbsp;</p>
 <p class="style3">&nbsp;</p>
 <p class="style3">&nbsp;</p>
