--- a/czjszbzrtu.html
+++ b/czjszbzrtu.html
@@ -51,6 +51,7 @@ a:hover {
 				border: 1px solid #0000FF;
 }
 .STYLE37 {color: #FF0000}
+.STYLE38 {font-size: x-large; color: #FF0000; text-align: center; font-family: 楷体; }
 </style>
 </head>
 
@@ -62,9 +63,17 @@ a:hover {
 <p class="style32">&nbsp;</p>
 <table style="width: 100%" class="style36">
 				<tr>
-				  <td class="style33" style="width: 382px">20211030成员参加深大班主任发展论坛</td>
-				  <td class="style33">20211120初中名班研讨案例集</td>
-				  <td class="style33">20230218邮寄结业证书</td>
+				  <td class="STYLE38" style="width: 382px">202501</td>
+				  <td rowspan="2" class="style33">&nbsp;</td>
+				  <td rowspan="2" class="style33">&nbsp;</td>
+  </tr>
+				<tr>
+				  <td class="style33" style="width: 382px"><img src="jpg/工作室/202501.jpg" width="181" height="264" /></td>
+  </tr>
+				<tr>
+				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20211030成员参加深大班主任发展论坛</span></td>
+                  <td class="style33">20211120初中名班研讨案例集</td>
+                  <td class="style33">20230218邮寄结业证书</td>
   </tr>
 				<tr>
 				  <td class="style33" style="width: 382px"><img src="jpg/工作室/工作室20211030.jpg" width="339" height="254" /></td>
@@ -210,7 +219,7 @@ a:hover {
                   <td class="style33"><img src="20206/突击59.jpg" width="350" height="262" /></td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20190929<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx1d6e9fa7645660fe&amp;redirect_uri=http://static.scms.sztv.com.cn/ysz/yszlm/mt/xfkb/28317075.shtml?from=singlemessage&amp;response_type=code&amp;scope=snsapi_userinfo&amp;state=STATE#wechat_redirect">国庆主题活动</a></span></td>
+				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20190929国庆主题活动</span></td>
                   <td class="style33">20191014访湖南师大附中黄雅芩女士</td>
                   <td class="style33">20191014访长沙雅礼中学名师杨伯群</td>
   </tr>
@@ -220,7 +229,7 @@ a:hover {
                   <td class="style33"><img src="jpg/工作室/工作室201910141700.jpg" width="333" height="249" /></td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20190720<a href="https://v.alltuu.com/album?id=1012537404&amp;from=groupmessage&amp;isappinstalled=0">思维导图培训</a></span></td>
+				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20190720思维导图培训</span></td>
                   <td class="style33"><a href="https://www.meipian3.cn/2aehry50?share_depth=5&amp;user_id=ohbsluPC7Z7f6xQcCTjI8RO8qvMc&amp;sharer_id=ojq1tt-UbXQEVLm_dxBa396us7dM&amp;first_share_uid=39797716&amp;share_user_mpuuid=896338b68f595c3a116856362e1abb1e&amp;v=5.0.2&amp;share_source=groupmessage">20190730主持人沙龙活动</a></td>
                   <td class="style33">20190824孔祥渊博士开题活动</td>
   </tr>
@@ -240,9 +249,9 @@ a:hover {
                   <td class="style33"><img src="jpg/工作室/工作室16.jpg" width="333" height="250" /></td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><a href="https://mp.weixin.qq.com/s/bmnRE_V1f1UUHU7WVd_NIA">20190517工作室授牌仪式</a></td>
+				  <td class="style33" style="width: 382px">20190517工作室授牌仪式</td>
                   <td class="style33">20190604亚迪学校指导语文备考</td>
-                  <td class="style33"><a href="https://mp.weixin.qq.com/s/rZFouM8-VDDHH_yBfX7fGg">20190605组织思维导图培训</a></td>
+                  <td class="style33">20190605组织思维导图培训</td>
   </tr>
 				<tr>
 				  <td class="style33" style="width: 382px"><img src="jpg/工作室/工作室9.jpg" width="333" height="250" /></td>
@@ -250,7 +259,7 @@ a:hover {
                   <td class="style33"><img src="jpg/2019/班210.jpg" width="333" height="249" /></td>
   </tr>
 				<tr>
-				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20190418 <a href="http://szeb.sz.gov.cn/jyxw/qxdt/201904/t20190419_16908676.htm">深圳初中名师课堂</a></span></td>
+				  <td class="style33" style="width: 382px"><span class="style33" style="width: 382px">20190418 深圳初中名师课堂</span></td>
                   <td class="style33">20190422 先锋898直播</td>
                   <td class="style33">20190510 家长会上谈成长</td>
   </tr>
@@ -291,7 +300,7 @@ a:hover {
 								<a href="https://mp.weixin.qq.com/s/YtlLZASq20tTcL5zS2HuIA">
 								20190411 接待深河实验学校</a></td>
 								<td class="style33">20190410 
-								<a href="http://cdn.ndszgb.com/dianwang/jydjs/20190411.mp4">南都名师中考备考公益直播</a></td>
+								南都名师中考备考公益直播</td>
 								<td class="style33">20190329&nbsp; 本校同课异构评课</td>
 				</tr>
 				<tr>
@@ -326,7 +335,7 @@ a:hover {
 				</tr>
 </table>
 <div style="position: absolute; width: 1196px; height: 60px; z-index: 3; left: 14px; top: 31px; bottom: 414px;" id="layer6" class="style15">
-&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a> <span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE37">图片</span></span></span>&nbsp;&nbsp;&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp; <a href="czjszbzrzc.html">主持人</a>&nbsp;<a href="czjszbzrjb.html">简报</a> <a href="czjszbzrsp.html">视 频</a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a> <span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE37">图片</span></span></span>&nbsp;&nbsp;&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp; <a href="czjszbzrzc.html">主持人</a>&nbsp;<a href="czjszbzrjb.html">简报</a> <a href="czjszbzrsp.html"></a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 
 </body>
 
