--- a/czjszbzrzc.html
+++ b/czjszbzrzc.html
@@ -108,7 +108,7 @@ a:hover {
 				</tr>
 				<tr>
 				  <td class="style37" style="width: 382px"><p>166、设备验收入库（12月3日）</p>
-			        </td>
+		          </td>
                   <td width="320" class="style33">&nbsp;</td>
                   <td width="320" class="style33">&nbsp;</td>
   </tr>
@@ -467,9 +467,9 @@ a:hover {
 			      33、工作室成员提交班主任工作计划（9月11日）<br />
 		          34、策划工作室部分成员外出学习活动（9月25日）<br />
 		          35、指导新老师毛静静规划成长方向（9月28日）<br />
-	              36、<a href="https://open.weixin.qq.com/connect/oauth2/authorize?appid=wx1d6e9fa7645660fe&amp;redirect_uri=http://static.scms.sztv.com.cn/ysz/yszlm/mt/xfkb/28317075.shtml?from=singlemessage&amp;response_type=code&amp;scope=snsapi_userinfo&amp;state=STATE#wechat_redirect">庆国庆主题活动――我爱我的祖国</a>（9月29日）<br /></td>
+	              36、庆国庆主题活动――我爱我的祖国（9月29日）<br /></td>
                   <td width="280" class="style37">36、协助盛老师同课异构试课（10月9日）<br />
-                    37、参加深中共同体<a href="https://mp.weixin.qq.com/s/fCW8UdMNZrhJVeK50y7W0A">语文同课异构活动（10月10日）</a><br />
+                    37、参加深中共同体语文同课异构活动（10月10日）<br />
                     38、准备长沙学习交流活动（10月10日）<br />
                     39、长沙学习交流（10月13-15日）<br />
                     40、研究工作室成果推送活动（10月16日）<br />
@@ -492,7 +492,7 @@ a:hover {
   </tr>
 				<tr>
 				  <td class="style37" style="width: 382px"><p>20、亚迪学校语文中考备考指导（6月4日）<br />
-				    21、<a href="https://mp.weixin.qq.com/s/rZFouM8-VDDHH_yBfX7fGg">组织工作室网络直播思维导图培训（</a>6月5日）<br />
+				    21、组织工作室网络直播思维导图培训（6月5日）<br />
 				    22、培训深河中学新入职教师（6月6日）<br />
 				    23、<span class="STYLE42">深河班主任制定三年规划培训（6月6日）</span><span class="STYLE40"><br />
 				    </span><span class="STYLE42">24、<a href="https://mp.weixin.qq.com/s/kgs_n6Hi0g8pBUiOWFKtAA">深河班主任说课活动点评指导</a>（6月13日）<br />
@@ -500,9 +500,9 @@ a:hover {
 				    26、中考阅卷1周（6月25-29日）下大雨炒不无可奈何<br />
 	              </p>			      </td>
                   <td width="280" class="style37">27、研习《教育学》《心理学》（7月）<br />
-                    28、<a href="https://v.alltuu.com/album?id=1012537404&amp;from=groupmessage&amp;isappinstalled=0">思维导图培训</a>（7月20－21日）<br />
+                    28、思维导图培训（7月20－21日）<br />
                   29、<a href="https://www.meipian3.cn/2aehry50?share_depth=5&amp;user_id=ohbsluPC7Z7f6xQcCTjI8RO8qvMc&amp;sharer_id=ojq1tt-UbXQEVLm_dxBa396us7dM&amp;first_share_uid=39797716&amp;share_user_mpuuid=896338b68f595c3a116856362e1abb1e&amp;v=5.0.2&amp;share_source=groupmessage">市名班主任主持人沙龙活动</a>（7月30日）</td>
-                  <td width="280" class="style37">30、<span class="style371">观摩<a href="https://mp.weixin.qq.com/s/bbXWLoiPskwSsEuH2yr1dw">直属学校年度教师评选</a>（8月1日）<br />
+                  <td width="280" class="style37">30、<span class="style371">观摩直属学校年度教师评选（8月1日）<br />
                   31、参加孔导重大招标课题开题会（8月24日）</span></td>
   </tr>
 				<tr>
@@ -515,15 +515,15 @@ a:hover {
 								9、初中部公众号发布<a href="https://mp.weixin.qq.com/s/D1Fzsh43ToXekJtH4h1n7Q">“三好班主任”</a>（3.13）<br />
 10、罗湖区福利中心关爱行动（3.23）<br />
 11、校内主题班会评课（3.29）</td>
-								<td width="280" class="style37">12、<a href="http://cdn.ndszgb.com/dianwang/jydjs/20190411.mp4">南都名师中考备战公益直播活动</a>（4月10日）<br />
+								<td width="280" class="style37">12、南都名师中考备战公益直播活动（4月10日）<br />
 13、<a href="https://mp.weixin.qq.com/s/YtlLZASq20tTcL5zS2HuIA">接待深河实验学校德育参访团</a>（4月11日）<br />
 14、<span class="style28"><span class="style27">深中共同体同课异构活动（4月11日）<br />
-15、<a href="http://szeb.sz.gov.cn/jyxw/qxdt/201904/t20190419_16908676.htm">深圳初中语文名师教学展示</a>（4月18日）<br />
+15、深圳初中语文名师教学展示（4月18日）<br />
 16、先锋898成长学院直播（4月22日）<br />
 </span></span></td>
 				  <td width="280" class="style37">17、准备申报课题（5月1-8日）<br />
 				    18、家长会上谈“社会能力培养”（5月10日）<br />
-			      19、<a href="https://mp.weixin.qq.com/s/bmnRE_V1f1UUHU7WVd_NIA">参加工作室授牌仪式</a>（5月17日）</td>
+			      19、参加工作室授牌仪式（5月17日）</td>
 				</tr>
 				<tr>
 								<td class="style33" style="width: 382px; height: 27px;">
@@ -535,12 +535,12 @@ a:hover {
 				<tr>
 								<td class="style36" style="width: 382px">
 <span class="style30">
-<span class="style23"><span class="style31">1、</span></span><span class="style31"><a href="http://www.shenzhong.net/news_23/6004.html">家庭教育讲座</a></span></span><span class="style23"><span class="style30"><span class="style36">（2018.10.24）<br />
+<span class="style23"><span class="style31">1、</span></span><span class="style31">家庭教育讲座</span></span><span class="style23"><span class="style30"><span class="style36">（2018.10.24）<br />
 2、班主任工作座谈（2018.11.08）<br />
 3、广州跟岗校长听课交流（2018.11.29）<br />
-4、<a href="深圳中学初一（9）班亲子活动实录.pdf">参观坪山东江纵队纪念馆</a>（2018.12.4）</span></span></span></td>
+4、参观坪山东江纵队纪念馆（2018.12.4）</span></span></span></td>
 								<td width="280" class="style37">
-								5、初中部<a href="http://www.shenzhong.net/news_23/6078.html">班主任工作论坛</a>（2019.01.09）<br />
+								5、初中部班主任工作论坛（2019.01.09）<br />
 6、参加初中部德育工作研讨（01.04-11）<br />
 7、学习“区域教育”课改报告（01.12）</td>
 								<td width="280" class="style39"><p class="style37">8、学习《想象后天》（陈宇著）（2.18）</p>							    </td>
@@ -567,7 +567,7 @@ a:hover {
 				</tr>
 </table>
 <div style="position: absolute; width: 1203px; height: 60px; z-index: 3; left: 14px; top: 30px; bottom: 422px;" id="layer6" class="style15">
-&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE41">主持人</span></span></span>&nbsp;&nbsp;&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp;<a href="czjszbzrtu.html">图片</a> <a href="czjszbzrjb.html">简报</a> <a href="czjszbzrsp.html">视频</a>&nbsp;&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
+&nbsp;<a href="czjszbzr.html"><img src="czj5.jpg" width="106" height="104" class="style35" /></a>&nbsp;<span class="style22"><span class="style26">深圳市陈正君名班主任工作室――<span class="STYLE41">主持人</span></span></span>&nbsp;&nbsp;&nbsp;<a href="czjszbzrsj.html">大事记</a>&nbsp;<a href="czjszbzrtu.html">图片</a> <a href="czjszbzrjb.html">简报</a>&nbsp;<a href="czjszbzr.html">返回</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div>
 
 </body>
 
